Korzystanie z properties, oraz dodanie paneli

--- a/src/main/resources/texts.properties
+++ b/src/main/resources/texts.properties
@@ -1,4 +1,8 @@
+# database settings
 db.driver = org.postgresql.Driver
 db.url = jdbc:postgresql://localhost:5432/users_database
 db.user = user
 db.password = terror1
+
+# frames titles
+main.title = Tabela u\u017Cytkownik\u00F3w
