--- a/src/main/resources/texts.properties
+++ b/src/main/resources/texts.properties
@@ -6,3 +6,7 @@ db.password = terror1
 
 # frames titles
 main.title = Tabela u\u017Cytkownik\u00F3w
+
+# buttons labels
+buttonsPanel.addButton = Dodaj
+buttonsPanel.deleteButton = Usu\u0144
